--- a/about.html
+++ b/about.html
@@ -886,7 +886,7 @@ Lectures
 <span class="nav-dropdown-header">16. Continuous relationships III</span>
 <span class="nav-dropdown-header">17. Correlation and causality</span>
 <span class="nav-dropdown-header">18. NHST critiques</span>
-<span class="nav-dropdown-header">Summing up</span>
+<span class="nav-dropdown-header">19. Summing up</span>
 </div>
 </div>
 </div>
@@ -948,7 +948,7 @@ Lectures
     <li class="dropdown-header">16. Continuous relationships III</li>
     <li class="dropdown-header">17. Correlation and causality</li>
     <li class="dropdown-header">18. NHST critiques</li>
-    <li class="dropdown-header">Summing up</li>
+    <li class="dropdown-header">19. Summing up</li>
   </ul>
 </li>
       </ul>
