--- a/schedule.html
+++ b/schedule.html
@@ -962,7 +962,7 @@ Lectures
 <span class="nav-dropdown-header">16. Continuous relationships III</span>
 <span class="nav-dropdown-header">17. Correlation and causality</span>
 <span class="nav-dropdown-header">18. NHST critiques</span>
-<span class="nav-dropdown-header">Summing up</span>
+<span class="nav-dropdown-header">19. Summing up</span>
 </div>
 </div>
 </div>
@@ -1024,7 +1024,7 @@ Lectures
     <li class="dropdown-header">16. Continuous relationships III</li>
     <li class="dropdown-header">17. Correlation and causality</li>
     <li class="dropdown-header">18. NHST critiques</li>
-    <li class="dropdown-header">Summing up</li>
+    <li class="dropdown-header">19. Summing up</li>
   </ul>
 </li>
       </ul>
@@ -1247,6 +1247,9 @@ href="./data/life_expectancy.csv">life_expectancy.csv</a></li>
 <li><a href="./assignments/assignment04.html">html file</a></li>
 <li><a href="./data/cont.csv">cont.csv</a></li>
 </ul>
+</div>
+<div id="unit-5" class="section level2">
+<h2>Unit 5</h2>
 </div>
 <div id="final-assignment" class="section level2">
 <h2>Final Assignment</h2>
