--- a/slides/EDUC641_1_intro.html
+++ b/slides/EDUC641_1_intro.html
@@ -33,11 +33,60 @@ class: center, middle, inverse, title-slide
 
 &lt;img src="roadmap.png" width="90%" style="display: block; margin: auto;" /&gt;
                                                           
+---
+# Goals of EDUC quant sequence
+
+- Develop the basic quantitative skills necessary to conduct applied data analysis
+ + The full-year sequence (EDUC 641 `\(\rightarrow\)` EDUC 643 `\(\rightarrow\)` EDUC 645) prepares you to make valuable contributions to a research team
+ + Not all the skills you will need (and not the only courses you should take), particularly for those interested in analysis-heavy positions, or becoming an applied quantitative doctoral-level researcher
+ + Foundations of statistics, methods and data science
+
+- Understand the (in)appropriate application of those skills
+ + "Building a toolbox, not a cookbook"
+ + Evaluate the credibility of published research
+ + Understand the affordances, limitations and dangers of quantitative analysis
+ 
+---
+# Pedagogical orientation of EDUC
+
+- Analysis follows research design that emerges from substantive questions
+- Students learn statistical analysis by doing statistical analysis
+- Start from an assumption of no prior background in mathematics, statistics or research
+- Create an inclusive, supportive environment in which we learn from each other
+
+-- 
+
+.blue[Social conventions and schooling practices often convince some people, particularly women,  people of color and disabled individuals, that they are “bad at math.” We believe that quantitative skills, like any other skills, are built through regular practice, over time, and that all of our students can be successful in the EDUC quant sequence. We encourage all students, particularly those underrepresented in this field, to pursue the EDUC sequence and additional quantitative analysis courses in the COE and around the UO.]
+
+---
+# Goals of EDUC 641
+
+We will focus on describing categorical and continuous data and quantifying relationships between categorical and continuous data. Students will form a solid foundation for frequentist, inferential statistics (and some of critiques of this model). The course seeks to blend a conceptual, mathematical and applied understanding of basic statistical concepts.
+
+Concrete learning objectives:
+1. Articulate the principles of responsible and ethical quantitative research
+2. Describe, summarize and visualize quantitative data that are categorical and continuous
+3. Describe, summarize and visualize the relationships between quantitative data that are categorical and continuous
+4. Conduct a frequentist null-hypothesis significance test of the relationships between simple categorical and continuous data
+5. Describe strategies to improve the replicability and generalizability of quantitative research
+6. Use the R programming language to conduct all such analyse
+
+---
+# Roadmap of class
+
+| Unit  | Week(s) | Topic
+|------------------------------------------------------------------------------
+| 0     | 1       | Introduction to scientific principles and quant analysis
+| 1     | 2       | Categorical descriptives
+| 2     | 2-3     | Categorical relationships
+| 3     | 4-6     | Continuous descriptives and inference
+| 4     | 7-8     | Continuous relationships
+| 5     | 9-10    | Threats and wrap-up
 
 ---
 # Features of scientific research
 
-#### 1. Data-based
+#### 1. Empirically based
 #### 2. Systematic
 #### 4. Defined sample and population
 #### 4. Contextualized
@@ -67,15 +116,6 @@ class: center, middle, inverse, title-slide
 - How will you communicate findings?
 ]
 
----
-# Goals of EDUC sequence
-
-- Develop the basic quantitative skills necessary to be a research scientist
- + Not all the skills you will need (and not the only courses you should take)
- + Foundations of statistics, methods and data science
-
-- Contextualize those skills
- + "Building a toolbox, not a cookbook"
 
 ---
 # Kinds of statistics
