Re-organizing lectures

--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
 <meta http-equiv="X-UA-Compatible" content="IE=EDGE" />
 
 
-<meta name="author" content="TBD" />
+<meta name="author" content="David D. Liebowitz" />
 
 
-<title>EDUC 641: Introduction to Data Analysis in Education and the Social Sciences</title>
+<title>EDUC 641: Applied Statistics in Education and the Human Services</title>
 
 <!--radix_placeholder_navigation_in_header-->
 <meta name="distill:offset" content=""/>
@@ -1048,10 +1048,10 @@ Lectures
 
 
 
-<h1 class="title toc-ignore">EDUC 641: Introduction to Data Analysis in
-Education and the Social Sciences</h1>
+<h1 class="title toc-ignore">EDUC 641: Applied Statistics in Education
+and the Human Services</h1>
 <h3 class="subtitle">College of Education, University of Oregon</h3>
-<h4 class="author">TBD</h4>
+<h4 class="author">David D. Liebowitz</h4>
 
 </div>
 
@@ -1077,9 +1077,13 @@ analysis by <strong>doing</strong> statistical analysis. <em>This course
 </div>
 <div id="meeting-time-and-location" class="section level1">
 <h1>Meeting time and location</h1>
+<p><em>Class:</em> Tuesdays and Thursdays, 4:00pm - 5:20pm, 146 HEDCO
+<em>Lab:</em> Mondays, 4:00pm - 4:50pm, 116 Lokey and Tuesdays, 5:30pm -
+6:20pm 146 HEDCO</p>
 </div>
 <div id="instructors" class="section level1">
 <h1>Instructors</h1>
+<p>David Liebowitz Claire Zhang Havisha Khurana</p>
 </div>
 
 <!--radix_placeholder_site_after_body-->
