--- a/slides/EDUC641_2_measures.html
+++ b/slides/EDUC641_2_measures.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html lang="" xml:lang="">
   <head>
-    <title>Introduction and Principles of Quantitative Research</title>
+    <title>Quantitative Measures</title>
     <meta charset="utf-8" />
     <meta name="author" content="David D. Liebowitz" />
-    <script src="EDUC641_1_intro_files/header-attrs-2.14.3/header-attrs.js"></script>
-    <link href="EDUC641_1_intro_files/remark-css-0.0.1/default.css" rel="stylesheet" />
-    <link href="EDUC641_1_intro_files/remark-css-0.0.1/uo.css" rel="stylesheet" />
-    <link href="EDUC641_1_intro_files/remark-css-0.0.1/ki-fonts.css" rel="stylesheet" />
+    <script src="EDUC641_2_measures_files/header-attrs-2.14.3/header-attrs.js"></script>
+    <link href="EDUC641_2_measures_files/remark-css-0.0.1/default.css" rel="stylesheet" />
+    <link href="EDUC641_2_measures_files/remark-css-0.0.1/uo.css" rel="stylesheet" />
+    <link href="EDUC641_2_measures_files/remark-css-0.0.1/ki-fonts.css" rel="stylesheet" />
     <link rel="stylesheet" href="my_custom.css" type="text/css" />
     <link rel="stylesheet" href="xaringanthemer.css" type="text/css" />
   </head>
@@ -16,10 +16,10 @@
 class: center, middle, inverse, title-slide
 
 .title[
-# Introduction and Principles of Quantitative Research
+# Quantitative Measures
 ]
 .subtitle[
-## EDUC 641: Class 1
+## EDUC 641: Class 2
 ]
 .author[
 ### David D. Liebowitz
@@ -29,149 +29,162 @@ class: center, middle, inverse, title-slide
 
 
 
-# Roadmap
-
-&lt;img src="roadmap.png" width="90%" style="display: block; margin: auto;" /&gt;
-
----
-# Class goals
-
-1. Describe goals and structure and of the course (and the quantitative EDUC sequence more broadly) and principles of scientific research
-
----
-# Goals of EDUC quant sequence
-
-- Develop the basic quantitative skills necessary to conduct applied data analysis
- + The full-year sequence (EDUC 641 `\(\rightarrow\)` EDUC 643 `\(\rightarrow\)` EDUC 645) prepares you to make valuable contributions to a research team
- + Not all the skills you will need (and not the only courses you should take), particularly for those interested in analysis-heavy positions, or becoming an applied quantitative doctoral-level researcher
- + Foundations of statistics, methods and data science
-
-- Understand the (in)appropriate application of those skills
- + "Building a toolbox, not a cookbook"
- + Evaluate the credibility of published research
- + Understand the affordances, limitations and dangers of quantitative analysis
- 
----
-# Pedagogical orientation of EDUC
-
-- Analysis follows research design that emerges from substantive questions
-- Students learn statistical analysis by doing statistical analysis
-- Start from an assumption of no prior background in mathematics, statistics or research
-- Create an inclusive, supportive environment in which we learn from each other
-- Balance support and academic stretch across a variety of levels of prior experience and comfort with quantitative analysis
-
---
-
-&lt;br&gt;
-
-.blue[**Social conventions and schooling practices often convince some people, particularly women,  people of color and disabled individuals, that they are “bad at math.” We believe that quantitative skills, like any other skills, are built through regular practice, over time, and that all of our students can be successful in the EDUC quantitative sequence.**]
-
-.blue[**We encourage all students, particularly those underrepresented in this field, to pursue the EDUC sequence and additional quantitative analysis courses in the COE and around the UO.**]
-
----
-# Goals of EDUC 641
-
-We will focus on describing categorical and continuous data and quantifying relationships between categorical and continuous data. Students will form a solid foundation for frequentist, inferential statistics (and some of critiques of this model). The course seeks to blend a conceptual, mathematical and applied understanding of basic statistical concepts.
-
-Concrete learning objectives:
-1. Articulate the principles of responsible and ethical quantitative research
-2. Describe, summarize and visualize quantitative data that are categorical and continuous
-3. Describe, summarize and visualize the relationships between quantitative data that are categorical and continuous
-4. Conduct a frequentist null-hypothesis significance test of the relationships between simple categorical and continuous data
-5. Describe strategies to improve the replicability and generalizability of quantitative research
-6. Use the R programming language to conduct all such analyses
-
----
-# Roadmap of EDUC 641
-
-| Unit  | Week(s) | Topic
-|------------------------------------------------------------------------------
-| 0     | 1       | Introduction to scientific principles and quantitative analysis
-| 1     | 2       | Categorical descriptives
-| 2     | 2-3     | Categorical relationships
-| 3     | 4-6     | Continuous descriptives and inference
-| 4     | 7-8     | Continuous relationships
-| 5     | 9-10    | Threats and wrap-up
-
-
----
-# Weekly schedule of activities
-
-1. Two 1.5-hour lectures will introduce concepts in interactive lectures, discussion and activities
-2. Readings are intended to supplement material from lectures (these can be completed after the first class of the unit)
-3. Two *OPTIONAL, UNGRADED* weekly lab meetings intended to provide support for R programming tasks. Each lab will cover identical material.
-4. Five (5) quizzes worth trivial amount of points each
-5. Four (4) data analytic assignments + final project
-
---
-
-&lt;br&gt;
-Course website is (we hope!) a valuable resource. Let's check it out!
-
 ---
 class: middle, inverse
 
-# Principles of scientific research
+# Quiz
 
 ---
 # Roadmap
 
 &lt;img src="roadmap.png" width="90%" style="display: block; margin: auto;" /&gt;
+                        
+---
+# Class goals
+1. Describe types of and differences in measurement scales
+
 
 ---
-# Features of scientific research
+# Types of data
 
-&lt;br&gt;
+&lt;img src="roadmap.png" width="80%" style="display: block; margin: auto;" /&gt;
 
-.small[
+**How we collect and quantify the data informs the kind of analysis we will conduct.**
 
-### 1. Empirically based
-### 2. Systematic
-### 4. Defined sample and population
-### 4. Contextualized
-### 5. Reliabile and valid
-### 6. Disprovable
-### 7. Peer-reviewed
 
-]
 ---
-# Three facets of research
+# Levels/scales of measurement
 
-&lt;br&gt;
-
-.pull-left[
-### Design
-- Where will you conduct research?
-- Population of interest?
-- Sample?
-- Variables to examine?
-
-### Measurement
-- How will you collect data?
-- How will you observe individuals' behavior?
-- How will measurement be valid?
-]
+**What is measurement?** assigning categories or numbers based on a set of rules
 
 --
 
-.pull-right[
-### Analysis
-- How will you process the data?
-- How will you estimate relationships?
-- How will you display results?
-- How will you communicate findings?
-]
+.blue[This concept is **critical** to quantitative research: we have some idea of a "thing" we want to examine (sometimes called a construct), and we need to figure how to turn the observed thing into a category or number.]
+
+--
+
+**Levels of measurement**: how categories/numbers are defined
+
+Each type of measurement has a set of properties which determines the appropriate analysis.
+
+--
+### Four levels/scales of measurement
+
+1. Nominal
+2. Ordinal
+3. Interval
+4. Ratio
+
+---
+# Nominal scale
+
+#### No hierarchy among levels of a variable
+#### Levels are unordered, representing labels
+#### A variable defining whether someone is an omnivore, vegetarian, vegan or fruititarian is on a nominal sclae
+
+#### Most demographic variables are nominal:
+- Hair color
+- Race
+- Ethnicity
+- Gender
+
+---
+# Ordinal scale
+
+#### Levels are logically ordered; a higher level indicates "more"
+#### Distances between levels are not necessarily equal
+#### Level 1 &lt; Level 2 &lt; Level 3 &lt; ... (monotonicity)
+
+#### Examples:
+- Grades (A - F letter grades)
+- Competition (1st place, 2nd place, 3rd place)
+- Likert scale (on a scale of 1 to 10 with 1 being *very unhappy* and ten being *very happy*, how happy are you today?)
+
+---
+# Interval scale
+
+#### Represents *quantity* and has *equal units*
+#### Ordinal scale + equal measurement units
+#### **There is no absolute zero**
+
+#### Examples:
+- The Fahrenheit temperature scale
+ + The difference between 20 F and 30 F is the same as the difference between 60 F and 70 F
+ + 0 does not represent "no temperature"
+ + There is no concept of dividing or multiplying values on the scale. There are no ratios. We can't describe 50 F as half as hot as 100 F or twice as hot as 25 F
+
+---
+# Ratio scale
+
+#### Interval scale + True zero point
+#### True zero means a point where the thing being measured does not exist
+
+Examples:
+- Height
+- Mass
+- Distance
+- Length of a piece of wood
+- Test score (?)
+
+---
+# Levels of measurement
+
+|            | Indicates difference | Indicates direction of difference | Indicates amount of difference | Has absolute zero
+|---------------------------------------------------------------------------------------------------------------------------
+| ?????????  | X |   |   | 
+| ?????????  | X | X |   | 
+| ?????????  | X | X | X | 
+| ?????????  | X | X | X | X
+
+.blue[**Can you match the four measurement scales to their characteristics in the above table?**] Try not to peek ahead to the next slide?
+
+---
+# Levels of measurement
+
+|          | Indicates difference | Indicates direction of difference | Indicates amount of difference | Has absolute zero
+|---------------------------------------------------------------------------------------------------------------------------
+| Nominal  | X |   |   | 
+| Ordinal  | X | X |   | 
+| Interval | X | X | X | 
+| Ratio    | X | X | X | X
 
 
 ---
-# Research design and statistics
+# Alternative measure terms
 
-#### This sequence focuses on statistics, but **research design** is AS (MORE?) important
-#### It can be tempting to use statistical techniques to fix poor research design
-- "You can't fix by analysis what you bungled by design" -Light, Singer &amp; Willett. (1990). *By Design*
-- Make sure you master content from EDUC 612, particularly concepts of: 
- + measurement, internal and external validity
-- Strongly encourage you to consider courses in advanced research design (EDUC 646, EDLD 650, EDLD 679) after completing the quantitative EDUC sequence
+Categorical variable
+- Nominal and ordinal measures
+- Use labels to describe
+
+--
+
+Continuous variable
+- Interval and ratio measures
+- Data with arithmetic properties
+
+---
+# Four levels/scales of measurement
+
+1. Nominal
+2. Ordinal
+3. Interval
+4. Ratio
+
+.red[**Why does this matter?**] 
+
+--
+Different scales contain different information and have different mathematical properties. 
+
+--
+
+Is someone who says they are at 8 on a happiness scale twice as happy as someone who says they are at a 4?
+
+Is there a mean (or standard deviation) for the hair color of the students in this class?
+
+---
+# The measure of our class
+
+Qualtrics
 
 ---
 class: middle, inverse
@@ -181,7 +194,7 @@ class: middle, inverse
 ---
 # Class goals
 
-1. Describe goals and structure and of the course (and the quantitative EDUC sequence more broadly) and principles of scientific research
+1. Describe types of and differences in measurement scales
 
 ---
 # To-Dos
@@ -194,6 +207,7 @@ class: middle, inverse
 
 ### Assignment:
 - Download and familiarize yourself with R/RStudio interface
+
 
     </textarea>
 <style data-target="print-only">@media screen {.remark-slide-container{display:block;}.remark-slide-scaler{box-shadow:none;}}</style>
