Update Bootcamp assignments

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <meta name="author" content="David D. Liebowitz" />
 
 
-<title>EDUC 641: Applied Statistics in Education and the Human Services</title>
+<title>EDUC 641: Applied Statistics in Education and Human Services</title>
 
 <!--radix_placeholder_navigation_in_header-->
 <meta name="distill:offset" content=""/>
@@ -950,7 +950,7 @@ Lectures
 <a href="./slides/EDUC641_3_categdescr.html">3. Categorical descriptives</a>
 <a href="./slides/EDUC641_4_categrel.html">4. Categorical relationships I</a>
 <a href="./slides/EDUC641_4_categrel.html">5. Categorical relationships II</a>
-<span class="nav-dropdown-header">6. Troubling history of stats</span>
+<a href="./slides/EDUC641_6_history.html">6. Troubling history of stats</a>
 <a href="./slides/EDUC641_7_continuousdescr.html">7. Continuous descriptives I</a>
 <a href="./slides/EDUC641_7_continuousdescr.html">8. Continuous descriptives II</a>
 <a href="./slides/EDUC641_7_continuousdescr.html">9. Z-scores and effect sizes</a>
@@ -1019,7 +1019,9 @@ Lectures
     <li>
       <a href="./slides/EDUC641_4_categrel.html">5. Categorical relationships II</a>
     </li>
-    <li class="dropdown-header">6. Troubling history of stats</li>
+    <li>
+      <a href="./slides/EDUC641_6_history.html">6. Troubling history of stats</a>
+    </li>
     <li>
       <a href="./slides/EDUC641_7_continuousdescr.html">7. Continuous descriptives I</a>
     </li>
@@ -1079,7 +1081,7 @@ Lectures
 
 
 <h1 class="title toc-ignore">EDUC 641: Applied Statistics in Education
-and the Human Services</h1>
+and Human Services</h1>
 <h3 class="subtitle">College of Education, University of Oregon</h3>
 <h4 class="author">David D. Liebowitz</h4>
 
