--- a/slides/EDUC641_1_intro.html
+++ b/slides/EDUC641_1_intro.html
@@ -193,7 +193,7 @@ class: middle, inverse
 - Clayton (2020)
 
 ### Assignment:
-- Download and familiarize yourself with R/RStudio interface
+- Have downloaded R/RStudio and familiarized yourself with the RStudio environment (Modules 1 &amp; 2 from R Bootcamp)
 
     </textarea>
 <style data-target="print-only">@media screen {.remark-slide-container{display:block;}.remark-slide-scaler{box-shadow:none;}}</style>
