--- a/slides/EDUC641_2_measures.html
+++ b/slides/EDUC641_2_measures.html
@@ -29,7 +29,7 @@ class: center, middle, inverse, title-slide
 
 
 
----
+
 class: middle, inverse
 
 # Quiz
@@ -224,7 +224,8 @@ class: middle, inverse
 # To-Dos
 
 ### Optional follow-up:
-- Complete Modules 2 - 4 in R Bootcamp
+- Complete Module 4 in R Bootcamp (data types)
+- Complete Module 5 in R Bootcamp (vectors)
 
     </textarea>
 <style data-target="print-only">@media screen {.remark-slide-container{display:block;}.remark-slide-scaler{box-shadow:none;}}</style>
