--- a/slides/EDUC641_3_categdescr.html
+++ b/slides/EDUC641_3_categdescr.html
@@ -2756,10 +2756,11 @@ class: middle, inverse
 - LSWR Chapter 6: an overview of graphing in R; great to return to again and again
 
 ### Optional follow-up
-- Complete R Bootcamp Module 5 (vectors)
+- Complete R Bootcamp Module 3 (installing and loading a package)
 - Complete R Bootcamp Module 9 (importing data)
-- Complete R Bootcamp Module 11 (graphing)
-- Complete R Bootcamp Module 12 (projects)
+- Complete R Bootcamp Module 11 (creating plots)
+- Complete R Bootcamp Module 12 (creating a project)
+
 
 ### Assignment:
 - Assignment #1 Due TBD
