--- a/slides/EDUC641_4_categrel.html
+++ b/slides/EDUC641_4_categrel.html
@@ -750,8 +750,8 @@ class: middle, inverse
 - Levy (2019)
 
 ### Optional follow-up
-- Complete R Bootcamp Module 5 (vectors)
 - Complete R Bootcamp Module 6 (matrices)
+- Complete R Bootcamp Module 7 (lists)
 
 ### Assignments
 - Assignment #2 Due TBD
