--- a/slides/EDUC641_7_continuousdescr.html
+++ b/slides/EDUC641_7_continuousdescr.html
@@ -630,13 +630,14 @@ class: middle, inverse
 # To Dos
 
 ### Reading
-LSWR Chapter 5: descriptive statistics
+- LSWR Chapter 5: descriptive statistics
 
 ### Optional follow-up
-Complete Module 7 (lists) and Module 10 (data management) in R Bootcamp
+- Complete Module 8 (dataframes) in R Bootcamp
+- Complete Module 10 (data management) in R Bootcamp
 
 ### Assignments
-Assignment #3 TBD
+- Assignment #3 TBD
     </textarea>
 <style data-target="print-only">@media screen {.remark-slide-container{display:block;}.remark-slide-scaler{box-shadow:none;}}</style>
 <script src="https://remarkjs.com/downloads/remark-latest.min.js"></script>
