--- a/syllabus.html
+++ b/syllabus.html
@@ -949,7 +949,7 @@ Lectures
 <a href="./slides/EDUC641_3_categdescr.html">3. Categorical descriptives</a>
 <a href="./slides/EDUC641_4_categrel.html">4. Categorical relationships I</a>
 <a href="./slides/EDUC641_4_categrel.html">5. Categorical relationships II</a>
-<span class="nav-dropdown-header">6. Troubling history of stats</span>
+<a href="./slides/EDUC641_6_history.html">6. Troubling history of stats</a>
 <a href="./slides/EDUC641_7_continuousdescr.html">7. Continuous descriptives I</a>
 <a href="./slides/EDUC641_7_continuousdescr.html">8. Continuous descriptives II</a>
 <a href="./slides/EDUC641_7_continuousdescr.html">9. Z-scores and effect sizes</a>
@@ -1018,7 +1018,9 @@ Lectures
     <li>
       <a href="./slides/EDUC641_4_categrel.html">5. Categorical relationships II</a>
     </li>
-    <li class="dropdown-header">6. Troubling history of stats</li>
+    <li>
+      <a href="./slides/EDUC641_6_history.html">6. Troubling history of stats</a>
+    </li>
     <li>
       <a href="./slides/EDUC641_7_continuousdescr.html">7. Continuous descriptives I</a>
     </li>
