--- a/slides/EDUC641_2_measures.html
+++ b/slides/EDUC641_2_measures.html
@@ -183,27 +183,27 @@ Is there a mean (or standard deviation) for the hair color of the students in th
 
 ---
 # The measure of our class
-&lt;img src="measures/Slide1.jpg" width="1707" style="display: block; margin: auto;" /&gt;
+&lt;img src="./measures/Slide1.jpg" width="1707" style="display: block; margin: auto;" /&gt;
 
 ---
 # The measure of our class
-&lt;img src="measures/Slide2.jpg" width="1707" style="display: block; margin: auto;" /&gt;
+&lt;img src="./measures/Slide2.jpg" width="1707" style="display: block; margin: auto;" /&gt;
 
 ---
 # The measure of our class
-&lt;img src="measures/Slide3.jpg" width="1707" style="display: block; margin: auto;" /&gt;
+&lt;img src="./measures/Slide3.jpg" width="1707" style="display: block; margin: auto;" /&gt;
 
 ---
 # The measure of our class
-&lt;img src="measures/Slide4.jpg" width="1707" style="display: block; margin: auto;" /&gt;
+&lt;img src="./measures/Slide4.jpg" width="1707" style="display: block; margin: auto;" /&gt;
 
 ---
 # The measure of our class
-&lt;img src="measures/Slide5.jpg" width="1707" style="display: block; margin: auto;" /&gt;
+&lt;img src="./measures/Slide5.jpg" width="1707" style="display: block; margin: auto;" /&gt;
 
 ---
 # The measure of our class
-&lt;img src="measures/Slide6.jpg" width="1707" style="display: block; margin: auto;" /&gt;
+&lt;img src="./measures/Slide6.jpg" width="1707" style="display: block; margin: auto;" /&gt;
 
 ---
 # The measure of our class
