Update file director for measures

--- a/slides/EDUC641_2_measures.html
+++ b/slides/EDUC641_2_measures.html
@@ -183,7 +183,7 @@ Is there a mean (or standard deviation) for the hair color of the students in th
 
 ---
 # The measure of our class
-&lt;img src="./measures/Slide1.jpg" width="1707" style="display: block; margin: auto;" /&gt;
+&lt;img src="./measures/Slide1.JPG" width="1707" style="display: block; margin: auto;" /&gt;
 
 ---
 # The measure of our class
