--- a/index.html
+++ b/index.html
@@ -1109,13 +1109,20 @@ analysis by <strong>doing</strong> statistical analysis. <em>This course
 </div>
 <div id="meeting-time-and-location" class="section level1">
 <h1>Meeting time and location</h1>
-<p><em>Class:</em> Tuesdays and Thursdays, 4:00pm - 5:20pm, 146 HEDCO
-<em>Lab:</em> Mondays, 4:00pm - 4:50pm, 116 Lokey and Tuesdays, 5:30pm -
-6:20pm 146 HEDCO</p>
+<ul>
+<li><em>Class:</em> Tuesdays and Thursdays, 4:00pm - 5:20pm, 146
+HEDCO</li>
+<li><em>Lab:</em> Mondays, 4:00pm - 4:50pm, 116 Lokey and Tuesdays,
+5:30pm - 6:20pm 146 HEDCO</li>
+</ul>
 </div>
 <div id="instructors" class="section level1">
 <h1>Instructors</h1>
-<p>David Liebowitz Claire Zhang Havisha Khurana</p>
+<ul>
+<li>David D. Liebowitz</li>
+<li>Claire Zhang</li>
+<li>Havisha Khurana</li>
+</ul>
 </div>
 
 <!--radix_placeholder_site_after_body-->
