--- a/slides/EDUC641_2_measures.html
+++ b/slides/EDUC641_2_measures.html
@@ -183,27 +183,27 @@ Is there a mean (or standard deviation) for the hair color of the students in th
 
 ---
 # The measure of our class
-&lt;img src="measure1.jpg" width="1707" style="display: block; margin: auto;" /&gt;
+&lt;img src="measure1.JPG" width="1707" style="display: block; margin: auto;" /&gt;
 
 ---
 # The measure of our class
-&lt;img src="measure2.jpg" width="1707" style="display: block; margin: auto;" /&gt;
+&lt;img src="measure2.JPG" width="1707" style="display: block; margin: auto;" /&gt;
 
 ---
 # The measure of our class
-&lt;img src="measure3.jpg" width="1707" style="display: block; margin: auto;" /&gt;
+&lt;img src="measure3.JPG" width="1707" style="display: block; margin: auto;" /&gt;
 
 ---
 # The measure of our class
-&lt;img src="measure4.jpg" width="1707" style="display: block; margin: auto;" /&gt;
+&lt;img src="measure4.JPG" width="1707" style="display: block; margin: auto;" /&gt;
 
 ---
 # The measure of our class
-&lt;img src="measure5.jpg" width="1707" style="display: block; margin: auto;" /&gt;
+&lt;img src="measure5.JPG" width="1707" style="display: block; margin: auto;" /&gt;
 
 ---
 # The measure of our class
-&lt;img src="measure6.jpg" width="1707" style="display: block; margin: auto;" /&gt;
+&lt;img src="measure6.JPG" width="1707" style="display: block; margin: auto;" /&gt;
 
 ---
 # The measure of our class
