--- a/LICENSE.html
+++ b/LICENSE.html
@@ -889,7 +889,7 @@ Lectures
 </div>
 <div class="nav-right">
 <a href="assignments.html">Assignments</a>
-<a href="https://github.com/uo-educ-quant/641">
+<a href="https://github.com/DavidDLiebowitz/EDUC641_22F">
 <i class="fa fa-github" aria-hidden="true"></i>
 </a>
 <a href="javascript:void(0);" class="nav-toggle">&#9776;</a>
@@ -987,7 +987,7 @@ Lectures
   <a href="assignments.html">Assignments</a>
 </li>
 <li>
-  <a href="https://github.com/uo-educ-quant/641">
+  <a href="https://github.com/DavidDLiebowitz/EDUC641_22F">
     <span class="fa fa-github"></span>
      
   </a>
