--- a/slides/EDUC641_14_continuousrel.html
+++ b/slides/EDUC641_14_continuousrel.html
@@ -683,14 +683,14 @@ class: middle, inverse
 - Conduct a statistical inference test of the slope and intercept of a bivariate regression model
 - Write R scripts to conduct these analyses
 
-----
+---
 # To Dos
 
 ### Reading
 LSWR Chapter 15.1 and 15.2: bivariate regression
 
 ### Assignments
-Assignment #4 Due TBD
+Assignment #4 Due November 28 at 11:59PM
     </textarea>
 <style data-target="print-only">@media screen {.remark-slide-container{display:block;}.remark-slide-scaler{box-shadow:none;}}</style>
 <script src="https://remarkjs.com/downloads/remark-latest.min.js"></script>
