--- a/slides/EDUC641_17_critiques.html
+++ b/slides/EDUC641_17_critiques.html
@@ -247,7 +247,7 @@ class: middle, inverse
 # To Dos
 
 ### Final project 
-Due TBD
+Due Dec. 7, 11:59pm
     </textarea>
 <style data-target="print-only">@media screen {.remark-slide-container{display:block;}.remark-slide-scaler{box-shadow:none;}}</style>
 <script src="https://remarkjs.com/downloads/remark-latest.min.js"></script>
