--- a/slides/EDUC641_6_history.html
+++ b/slides/EDUC641_6_history.html
@@ -51,7 +51,7 @@ class: middle, inverse
 - Complete R Bootcamp Module 8 (dataframes)
 
 ### Assignments
-- Assignment #2 Due TBD
+- Assignment #2 Due October 17, 11:59pm
 
 
     </textarea>
