--- a/slides/EDUC641_7_continuousdescr.html
+++ b/slides/EDUC641_7_continuousdescr.html
@@ -637,7 +637,7 @@ class: middle, inverse
 - Complete Module 10 (data management) in R Bootcamp
 
 ### Assignments
-- Assignment #3 TBD
+- Assignment #3 due November 7, 11:59pm
     </textarea>
 <style data-target="print-only">@media screen {.remark-slide-container{display:block;}.remark-slide-scaler{box-shadow:none;}}</style>
 <script src="https://remarkjs.com/downloads/remark-latest.min.js"></script>
