--- a/schedule.html
+++ b/schedule.html
@@ -1085,9 +1085,14 @@ Lectures
 
 
 <p><strong>Note: readings are intended to be completed <em>after</em>
-subject is covered by class lecture. You are welcome to read them in
-advance and encouraged to preview the slides prior to that unit’s
-lectures.</strong></p>
+subject is covered by class lecture; however, you are welcome to read
+them in advance. You are encouraged to preview the slides prior to that
+unit’s lectures.</strong></p>
+<p><em>We have provided the lecture slides in .html and .pdf format.
+Some of the slide features will only work in .html format while
+connected to the internet. Feel free to download the PDFs for later use
+(you’ll miss out on animations and interactivities, but most information
+will render correctly).</em></p>
 <div id="unit-0" class="section level2">
 <h2>Unit 0</h2>
 <p><strong>Topic: Introduction to scientific principles and data
