--- a/slides/EDUC641_10_inference.html
+++ b/slides/EDUC641_10_inference.html
@@ -589,7 +589,7 @@ To Dos
 - LSWR Chapter 10: inference and CLT
 
 ### Assignment
-- Assignment #3 Due TBD
+- Assignment #3 Due Nov. 7, 11:59pm
 
     </textarea>
 <style data-target="print-only">@media screen {.remark-slide-container{display:block;}.remark-slide-scaler{box-shadow:none;}}</style>
