Add template syllabus language

--- a/index.html
+++ b/index.html
@@ -1119,7 +1119,7 @@ HEDCO</li>
 <div id="instructors" class="section level1">
 <h1>Instructors</h1>
 <ul>
-<li>David D. Liebowitz (office hours: Mondays 1-2:30pm or by
+<li>David D. Liebowitz (office hours: Thursdays 9:00-10:30am or by
 appointment)</li>
 <li>Claire Zhang</li>
 <li>Havisha Khurana</li>
