--- a/syllabus.html
+++ b/syllabus.html
@@ -1108,14 +1108,21 @@ statistical analysis by <strong>doing</strong> statistical analysis.
 </div>
 <div id="meeting-time-and-location" class="section level1">
 <h1>Meeting Time and Location</h1>
-<p><em>Class:</em> Tuesdays and Thursdays, 4:00pm - 5:20pm, 146 HEDCO
-<em>Lab:</em> Mondays, 4:00pm - 4:50pm, 116 Lokey and Tuesdays, 5:30pm -
-6:20pm 146 HEDCO</p>
+<ul>
+<li><em>Class:</em> Tuesdays and Thursdays, 4:00pm - 5:20pm, 146
+HEDCO</li>
+<li><em>Lab:</em> Mondays, 4:00pm - 4:50pm, 116 Lokey and Tuesdays,
+5:30pm - 6:20pm 146 HEDCO</li>
+</ul>
 </div>
 <div id="instructors" class="section level1">
 <h1>Instructors</h1>
-<p>David Liebowitz (office hours: Mondays 1-2:30pm or by appointment)
-Claire Zhang Havisha Khurana</p>
+<ul>
+<li>David Liebowitz (office hours: Thursdays 9-10:30am or by
+appointment)</li>
+<li>Claire Zhang</li>
+<li>Havisha Khurana</li>
+</ul>
 </div>
 <div id="student-learning-outcomes" class="section level1">
 <h1>Student Learning Outcomes</h1>
@@ -1322,8 +1329,9 @@ study</a> from the University of Texas). After we have covered each
 topic, you should review your lecture notes and ensure that you
 understand the core substantive content, referencing LSWR to help
 clarify any fuzziness. The quizzes will cover the substance of material
-introduced in class only. Quizzes will be open book, notes and
-computer.</p>
+introduced in class only. Quizzes will be open book, notes and computer.
+Students who are absent and miss a quiz have until the end of the week
+to complete the quiz on Canvas.</p>
 </div>
 <div id="assignments" class="section level2">
 <h2>Assignments</h2>
@@ -1337,7 +1345,13 @@ mutually-agreeable collaboration if you do choose to collaborate. If you
 do collaborate, you should plan, execute and write-up your analyses
 together, not simply divide the work. Please make sure to indicate
 clearly when your work is joint and any other individual or resource
-(outside of class material) you consulted in your response. Further
+(outside of class material) you consulted in your response.</p>
+<p>Assignments are due at 11:59pm on their due date. If circumstances
+arise that require an extension on an assignment, please communicate
+with the lead instructor <em>prior</em> to the assignment’s due date. We
+will publish the answer keys to assignments prior to class the following
+day; thus, late assignments will be penalized by two (2) points. Late
+final projects may results in a final grade of I or D/F. Further
 assignment details are available <a
 href="./assignments.html">here</a></p>
 </div>
@@ -1410,30 +1424,34 @@ Community of Oregon and the Confederated Tribes of the Siletz Indians of
 Oregon, and they continue to make important contributions in their
 communities, at UO, and across the land we now refer to as Oregon.</p>
 </div>
-<div id="uo-covid-regulations-and-prevention" class="section level2">
-<h2>UO COVID Regulations and Prevention</h2>
-<p>TBD</p>
+<div id="graduate-assistants" class="section level2">
+<h2>Graduate assistants</h2>
+<p>If you are concurrently taking any courses with the GEs assigned to
+this course, please let David Liebowitz know. The GEs will not be
+involved with any review of assignments for students in this course who
+are taking other courses concurrently.</p>
 </div>
 <div id="absence-and-attendance-policies" class="section level2">
 <h2>Absence and Attendance Policies</h2>
-<p>Attendance at all class and discussion groups is expected and
-required. Students must contact the instructor in case of illness or
-emergencies that preclude attending class sessions. Messages can be left
-on the instructor’s e-mail at any time of the day or night, prior to
-class.</p>
-<p>As the university community adjusts to teaching and learning in the
-context of the COVID-19 pandemic, course requirements, deadlines, and
-grading percentages are subject to change. I will be mindful of the many
-impacts the unfolding events related to COVID-19 may be having on you.
-There may be situations beyond the control of individual students that
-lead to excessive absences such as becoming ill, caring for others,
-managing home schooling, etc. Students are expected to attend class,
-however if a student misses more than two consecutive classes they will
-be asked to complete a make-up assignment to be developed by the
-instructor to compensate for the missed class time. Each student who is
-experiencing difficulty attending scheduled class times or class
-activities must contact the instructor to develop a plan for making up
-the class time and satisfactorily meeting the credit hours required.</p>
+<p>This is a face-to-face course. Attendance is important because we
+will develop our knowledge through in-class activities that require your
+active engagement. We’ll have discussions and group activities that will
+be richer for your presence, and that you won’t be able to benefit from
+if you are not there. While there is not an automatic grade deduction
+for missing classes, we hope to create a value proposition by which
+attending class will help you learn more and excessive absences will
+make it challenging to succeed in the course.</p>
+<p>We know our UO community will still be navigating COVID-19, and some
+students will need to isolate and rest if they get COVID. Please take
+absences only when necessary, so when they are necessary, your prior
+attendance will have positioned you for success. Students with COVID are
+encouraged to seek guidance and resources at <a
+href="https://coronavirus.uoregon.edu/">UO’s COVID-19 Safety
+Resources</a> webpage.</p>
+<p>I will be mindful of the many impacts the unfolding events related to
+COVID-19 may be having on you. There may be situations beyond the
+control of individual students that lead to excessive absences such as
+becoming ill, caring for others, managing home schooling, etc.</p>
 </div>
 <div id="diversity-equity-and-inclusion" class="section level2">
 <h2>Diversity, Equity, and Inclusion</h2>
@@ -1556,8 +1574,8 @@ href="http://aaeo.uoregon.edu/content/discrimination-harassment">http://aaeo.uor
 obligations of employees can be found at <a
 href="https://titleix.uoregon.edu">https://titleix.uoregon.edu</a>.</p>
 </div>
-<div id="reporting-obligations" class="section level2">
-<h2>Reporting Obligations</h2>
+<div id="mandatory-reporter-status" class="section level2">
+<h2>Mandatory Reporter Status</h2>
 <p>I am a student-directed employee. For information about my reporting
 obligations as an employee, please see Employee Reporting Obligations on
 the Office of Investigations and Civil Rights Compliance (OICRC)
@@ -1570,8 +1588,8 @@ Students offices (541-346-3216), or call the 24-7 hotline 541-346-SAFE
 for help. I am also a mandatory reporter of child abuse. Please find
 more information at Mandatory Reporting of Child Abuse and Neglect</p>
 </div>
-<div id="academic-misconduct" class="section level2">
-<h2>Academic Misconduct</h2>
+<div id="academic-integrity" class="section level2">
+<h2>Academic Integrity</h2>
 <p>The University Student Conduct Code (available at
 conduct.uoregon.edu) defines academic misconduct. Students are
 prohibited from committing or attempting to commit any act that
