update for Week 1

--- a/about.html
+++ b/about.html
@@ -870,22 +870,22 @@ Lectures
 <div class="nav-dropdown-content">
 <a href="./slides/EDUC641_1_intro.html">1. Intro &amp; research design</a>
 <a href="./slides/EDUC641_2_measures.html">2. Measurement</a>
-<a href="./slides/EDUC641_3_categdescr.html">3. Categorical descriptives</a>
-<a href="./slides/EDUC641_4_categrel.html">4. Categorical relationships I</a>
-<a href="./slides/EDUC641_4_categrel.html">5. Categorical relationships II</a>
-<a href="./slides/EDUC641_6_history.html">6. Troubling history of stats</a>
-<a href="./slides/EDUC641_7_continuousdescr.html">7. Continuous descriptives I</a>
-<a href="./slides/EDUC641_7_continuousdescr.html">8. Continuous descriptives II</a>
-<a href="./slides/EDUC641_7_continuousdescr.html">9. Z-scores and effect sizes</a>
-<a href="./slides/EDUC641_10_inference.html">10. CLT I</a>
-<a href="./slides/EDUC641_10_inference.html">11. CLT II</a>
-<a href="./slides/EDUC641_10_inference.html">12. NHST</a>
-<a href="./slides/EDUC641_10_inference.html">13. One-sample t-tests</a>
-<a href="./slides/EDUC641_14_continuousrel.html">14. Continuous relationships I</a>
-<a href="./slides/EDUC641_14_continuousrel.html">15. Continuous relationships II</a>
-<a href="./slides/EDUC641_14_continuousrel.html">16. Continuous relationships III</a>
-<a href="./slides/EDUC641_17_critiques.html">17. NHST critiques</a>
-<a href="./slides/EDUC641_17_critiques.html">18. NHST critiques and summary</a>
+<span class="nav-dropdown-header">3. Categorical descriptives</span>
+<span class="nav-dropdown-header">4. Categorical relationships I</span>
+<span class="nav-dropdown-header">5. Categorical relationships II</span>
+<span class="nav-dropdown-header">6. Troubling history of stats</span>
+<span class="nav-dropdown-header">7. Continuous descriptives I</span>
+<span class="nav-dropdown-header">8. Continuous descriptives II</span>
+<span class="nav-dropdown-header">9. Z-scores and effect sizes</span>
+<span class="nav-dropdown-header">10. CLT I</span>
+<span class="nav-dropdown-header">11. CLT II</span>
+<span class="nav-dropdown-header">12. NHST</span>
+<span class="nav-dropdown-header">13. One-sample t-tests</span>
+<span class="nav-dropdown-header">14. Continuous relationships I</span>
+<span class="nav-dropdown-header">15. Continuous relationships II</span>
+<span class="nav-dropdown-header">16. Continuous relationships III</span>
+<span class="nav-dropdown-header">17. NHST critiques</span>
+<span class="nav-dropdown-header">18. NHST critiques and summary</span>
 </div>
 </div>
 </div>
@@ -933,54 +933,22 @@ Lectures
     <li>
       <a href="./slides/EDUC641_2_measures.html">2. Measurement</a>
     </li>
-    <li>
-      <a href="./slides/EDUC641_3_categdescr.html">3. Categorical descriptives</a>
-    </li>
-    <li>
-      <a href="./slides/EDUC641_4_categrel.html">4. Categorical relationships I</a>
-    </li>
-    <li>
-      <a href="./slides/EDUC641_4_categrel.html">5. Categorical relationships II</a>
-    </li>
-    <li>
-      <a href="./slides/EDUC641_6_history.html">6. Troubling history of stats</a>
-    </li>
-    <li>
-      <a href="./slides/EDUC641_7_continuousdescr.html">7. Continuous descriptives I</a>
-    </li>
-    <li>
-      <a href="./slides/EDUC641_7_continuousdescr.html">8. Continuous descriptives II</a>
-    </li>
-    <li>
-      <a href="./slides/EDUC641_7_continuousdescr.html">9. Z-scores and effect sizes</a>
-    </li>
-    <li>
-      <a href="./slides/EDUC641_10_inference.html">10. CLT I</a>
-    </li>
-    <li>
-      <a href="./slides/EDUC641_10_inference.html">11. CLT II</a>
-    </li>
-    <li>
-      <a href="./slides/EDUC641_10_inference.html">12. NHST</a>
-    </li>
-    <li>
-      <a href="./slides/EDUC641_10_inference.html">13. One-sample t-tests</a>
-    </li>
-    <li>
-      <a href="./slides/EDUC641_14_continuousrel.html">14. Continuous relationships I</a>
-    </li>
-    <li>
-      <a href="./slides/EDUC641_14_continuousrel.html">15. Continuous relationships II</a>
-    </li>
-    <li>
-      <a href="./slides/EDUC641_14_continuousrel.html">16. Continuous relationships III</a>
-    </li>
-    <li>
-      <a href="./slides/EDUC641_17_critiques.html">17. NHST critiques</a>
-    </li>
-    <li>
-      <a href="./slides/EDUC641_17_critiques.html">18. NHST critiques and summary</a>
-    </li>
+    <li class="dropdown-header">3. Categorical descriptives</li>
+    <li class="dropdown-header">4. Categorical relationships I</li>
+    <li class="dropdown-header">5. Categorical relationships II</li>
+    <li class="dropdown-header">6. Troubling history of stats</li>
+    <li class="dropdown-header">7. Continuous descriptives I</li>
+    <li class="dropdown-header">8. Continuous descriptives II</li>
+    <li class="dropdown-header">9. Z-scores and effect sizes</li>
+    <li class="dropdown-header">10. CLT I</li>
+    <li class="dropdown-header">11. CLT II</li>
+    <li class="dropdown-header">12. NHST</li>
+    <li class="dropdown-header">13. One-sample t-tests</li>
+    <li class="dropdown-header">14. Continuous relationships I</li>
+    <li class="dropdown-header">15. Continuous relationships II</li>
+    <li class="dropdown-header">16. Continuous relationships III</li>
+    <li class="dropdown-header">17. NHST critiques</li>
+    <li class="dropdown-header">18. NHST critiques and summary</li>
   </ul>
 </li>
       </ul>
