--- a/slides/EDUC641_2_measures.html
+++ b/slides/EDUC641_2_measures.html
@@ -208,7 +208,11 @@ Is there a mean (or standard deviation) for the hair color of the students in th
 ---
 # The measure of our class
 
-Qualtrics
+Qualtrics: https://oregon.qualtrics.com/jfe/form/SV_0MSB8ExhepNtVdA
+
+or
+
+&lt;img src="survey_qr.jpg" width="333" style="display: block; margin: auto;" /&gt;
 
 ---
 class: middle, inverse
