--- a/assignments.html
+++ b/assignments.html
@@ -946,22 +946,22 @@ Lectures
 <div class="nav-dropdown-content">
 <a href="./slides/EDUC641_1_intro.html">1. Intro &amp; research design</a>
 <a href="./slides/EDUC641_2_measures.html">2. Measurement</a>
-<a href="./slides/EDUC641_3_categdescr.html">3. Categorical descriptives</a>
-<a href="./slides/EDUC641_4_categrel.html">4. Categorical relationships I</a>
-<a href="./slides/EDUC641_4_categrel.html">5. Categorical relationships II</a>
-<a href="./slides/EDUC641_6_history.html">6. Troubling history of stats</a>
-<a href="./slides/EDUC641_7_continuousdescr.html">7. Continuous descriptives I</a>
-<a href="./slides/EDUC641_7_continuousdescr.html">8. Continuous descriptives II</a>
-<a href="./slides/EDUC641_7_continuousdescr.html">9. Z-scores and effect sizes</a>
-<a href="./slides/EDUC641_10_inference.html">10. CLT I</a>
-<a href="./slides/EDUC641_10_inference.html">11. CLT II</a>
-<a href="./slides/EDUC641_10_inference.html">12. NHST</a>
-<a href="./slides/EDUC641_10_inference.html">13. One-sample t-tests</a>
-<a href="./slides/EDUC641_14_continuousrel.html">14. Continuous relationships I</a>
-<a href="./slides/EDUC641_14_continuousrel.html">15. Continuous relationships II</a>
-<a href="./slides/EDUC641_14_continuousrel.html">16. Continuous relationships III</a>
-<a href="./slides/EDUC641_17_critiques.html">17. NHST critiques</a>
-<a href="./slides/EDUC641_17_critiques.html">18. NHST critiques and summary</a>
+<span class="nav-dropdown-header">3. Categorical descriptives</span>
+<span class="nav-dropdown-header">4. Categorical relationships I</span>
+<span class="nav-dropdown-header">5. Categorical relationships II</span>
+<span class="nav-dropdown-header">6. Troubling history of stats</span>
+<span class="nav-dropdown-header">7. Continuous descriptives I</span>
+<span class="nav-dropdown-header">8. Continuous descriptives II</span>
+<span class="nav-dropdown-header">9. Z-scores and effect sizes</span>
+<span class="nav-dropdown-header">10. CLT I</span>
+<span class="nav-dropdown-header">11. CLT II</span>
+<span class="nav-dropdown-header">12. NHST</span>
+<span class="nav-dropdown-header">13. One-sample t-tests</span>
+<span class="nav-dropdown-header">14. Continuous relationships I</span>
+<span class="nav-dropdown-header">15. Continuous relationships II</span>
+<span class="nav-dropdown-header">16. Continuous relationships III</span>
+<span class="nav-dropdown-header">17. NHST critiques</span>
+<span class="nav-dropdown-header">18. NHST critiques and summary</span>
 </div>
 </div>
 </div>
@@ -1009,54 +1009,22 @@ Lectures
     <li>
       <a href="./slides/EDUC641_2_measures.html">2. Measurement</a>
     </li>
-    <li>
-      <a href="./slides/EDUC641_3_categdescr.html">3. Categorical descriptives</a>
-    </li>
-    <li>
-      <a href="./slides/EDUC641_4_categrel.html">4. Categorical relationships I</a>
-    </li>
-    <li>
-      <a href="./slides/EDUC641_4_categrel.html">5. Categorical relationships II</a>
-    </li>
-    <li>
-      <a href="./slides/EDUC641_6_history.html">6. Troubling history of stats</a>
-    </li>
-    <li>
-      <a href="./slides/EDUC641_7_continuousdescr.html">7. Continuous descriptives I</a>
-    </li>
-    <li>
-      <a href="./slides/EDUC641_7_continuousdescr.html">8. Continuous descriptives II</a>
-    </li>
-    <li>
-      <a href="./slides/EDUC641_7_continuousdescr.html">9. Z-scores and effect sizes</a>
-    </li>
-    <li>
-      <a href="./slides/EDUC641_10_inference.html">10. CLT I</a>
-    </li>
-    <li>
-      <a href="./slides/EDUC641_10_inference.html">11. CLT II</a>
-    </li>
-    <li>
-      <a href="./slides/EDUC641_10_inference.html">12. NHST</a>
-    </li>
-    <li>
-      <a href="./slides/EDUC641_10_inference.html">13. One-sample t-tests</a>
-    </li>
-    <li>
-      <a href="./slides/EDUC641_14_continuousrel.html">14. Continuous relationships I</a>
-    </li>
-    <li>
-      <a href="./slides/EDUC641_14_continuousrel.html">15. Continuous relationships II</a>
-    </li>
-    <li>
-      <a href="./slides/EDUC641_14_continuousrel.html">16. Continuous relationships III</a>
-    </li>
-    <li>
-      <a href="./slides/EDUC641_17_critiques.html">17. NHST critiques</a>
-    </li>
-    <li>
-      <a href="./slides/EDUC641_17_critiques.html">18. NHST critiques and summary</a>
-    </li>
+    <li class="dropdown-header">3. Categorical descriptives</li>
+    <li class="dropdown-header">4. Categorical relationships I</li>
+    <li class="dropdown-header">5. Categorical relationships II</li>
+    <li class="dropdown-header">6. Troubling history of stats</li>
+    <li class="dropdown-header">7. Continuous descriptives I</li>
+    <li class="dropdown-header">8. Continuous descriptives II</li>
+    <li class="dropdown-header">9. Z-scores and effect sizes</li>
+    <li class="dropdown-header">10. CLT I</li>
+    <li class="dropdown-header">11. CLT II</li>
+    <li class="dropdown-header">12. NHST</li>
+    <li class="dropdown-header">13. One-sample t-tests</li>
+    <li class="dropdown-header">14. Continuous relationships I</li>
+    <li class="dropdown-header">15. Continuous relationships II</li>
+    <li class="dropdown-header">16. Continuous relationships III</li>
+    <li class="dropdown-header">17. NHST critiques</li>
+    <li class="dropdown-header">18. NHST critiques and summary</li>
   </ul>
 </li>
       </ul>
@@ -1127,8 +1095,8 @@ in the above html/doc/pdf.</li>
 <li><p>Create visualizations of categorical data</p></li>
 </ul>
 <p>Deadline: TBD</p>
-<p>Download: <a href="./assignments/assignment01.html">html file</a>; <a
-href="./data/cat.csv">cat.csv dataset</a></p>
+<p>Download:
+<!-- [html file](./assignments/assignment01.html); [cat.csv dataset](./data/cat.csv) --></p>
 <p>Key: [doc file]; [R script]</p>
 </div>
 <div id="assignment-2" class="section level2">
@@ -1147,8 +1115,8 @@ inference from a sample to a population</p></li>
 and a statistical inference from a chi-squared statistic</p></li>
 </ul>
 <p>Deadline: TBD</p>
-<p>Download: <a href="./assignments/assignment02.html">html file</a>; <a
-href="./data/cat.csv">cat.csv dataset</a></p>
+<p>Download:
+<!-- [html file](./assignments/assignment02.html); [cat.csv dataset](./data/cat.csv) --></p>
 <p>Key: [doc file]; [R script]</p>
 </div>
 <div id="assignment-3" class="section level2">
@@ -1160,25 +1128,24 @@ href="./data/cat.csv">cat.csv dataset</a></p>
 <li><p>Create visualizations of continuous data</p></li>
 </ul>
 <p>Deadline: TBD</p>
-<p>Download: <a href="./assignments/assignment03.html">html file</a>; <a
-href="./data/cont.csv">cont.csv dataset</a></p>
+<p>Download:
+<!-- [html file](./assignments/assignment03.html); [cont.csv dataset](./data/cont.csv) --></p>
 <p>Key: [doc file]; [R script]</p>
 </div>
 <div id="assignment-4" class="section level2">
 <h2>3.4. Assignment 4</h2>
 <p>Continuous data 2: intro to bivariate regression</p>
 <p>Deadline: TBD</p>
-<p>Download: <a href="./assignments/assignment04.html">html file</a>; <a
-href="./data/cont.csv">cont.csv dataset</a></p>
+<p>Download:
+<!-- [html file](./assignments/assignment04.html); [cont.csv dataset](./data/cont.csv) --></p>
 <p>Key: [doc file]; [R script]</p>
 </div>
 <div id="final" class="section level2">
 <h2>3.5. Final</h2>
 <p>Final assignment</p>
 <p>Deadline: TBD</p>
-<p>Download: <a href="./assignments/assignment05.html">html file</a>; <a
-href="./data/ah01.csv">ah01.csv dataset</a>; <a
-href="./data/ah02.csv">ah02.csv dataset</a></p>
+<p>Download:
+<!-- [html file](./assignments/assignment05.html); [ah01.csv dataset](./data/ah01.csv); [ah02.csv dataset](./data/ah02.csv) --></p>
 <p>Key: [doc file]; [R script]</p>
 </div>
 </div>
