--- a/assignments.html
+++ b/assignments.html
@@ -1094,7 +1094,7 @@ in the above html/doc/pdf.</li>
 <li><p>Describe and summarize categorical data</p></li>
 <li><p>Create visualizations of categorical data</p></li>
 </ul>
-<p>Deadline: TBD</p>
+<p>Deadline: October 10, 11:59pm</p>
 <p>Download:
 <!-- [html file](./assignments/assignment01.html); [cat.csv dataset](./data/cat.csv) --></p>
 <p>Key: [doc file]; [R script]</p>
@@ -1114,7 +1114,7 @@ inference from a sample to a population</p></li>
 <li><p>Interpret and report the results of a contingency-table analysis
 and a statistical inference from a chi-squared statistic</p></li>
 </ul>
-<p>Deadline: TBD</p>
+<p>Deadline: October 19, 11:59pm</p>
 <p>Download:
 <!-- [html file](./assignments/assignment02.html); [cat.csv dataset](./data/cat.csv) --></p>
 <p>Key: [doc file]; [R script]</p>
@@ -1127,7 +1127,7 @@ and a statistical inference from a chi-squared statistic</p></li>
 <li><p>Describe and summarize continuous data</p></li>
 <li><p>Create visualizations of continuous data</p></li>
 </ul>
-<p>Deadline: TBD</p>
+<p>Deadline: November 7, 11:59pm</p>
 <p>Download:
 <!-- [html file](./assignments/assignment03.html); [cont.csv dataset](./data/cont.csv) --></p>
 <p>Key: [doc file]; [R script]</p>
@@ -1135,7 +1135,7 @@ and a statistical inference from a chi-squared statistic</p></li>
 <div id="assignment-4" class="section level2">
 <h2>3.4. Assignment 4</h2>
 <p>Continuous data 2: intro to bivariate regression</p>
-<p>Deadline: TBD</p>
+<p>Deadline: November 28, 11:59pm</p>
 <p>Download:
 <!-- [html file](./assignments/assignment04.html); [cont.csv dataset](./data/cont.csv) --></p>
 <p>Key: [doc file]; [R script]</p>
@@ -1143,7 +1143,7 @@ and a statistical inference from a chi-squared statistic</p></li>
 <div id="final" class="section level2">
 <h2>3.5. Final</h2>
 <p>Final assignment</p>
-<p>Deadline: TBD</p>
+<p>Deadline: December 7, 11:59pm</p>
 <p>Download:
 <!-- [html file](./assignments/assignment05.html); [ah01.csv dataset](./data/ah01.csv); [ah02.csv dataset](./data/ah02.csv) --></p>
 <p>Key: [doc file]; [R script]</p>
