--- a/slides/EDUC641_2_measures.html
+++ b/slides/EDUC641_2_measures.html
@@ -30,11 +30,6 @@ class: center, middle, inverse, title-slide
 
 
 
-class: middle, inverse
-
-# Quiz
-
----
 # Roadmap
 
 &lt;img src="roadmap.png" width="90%" style="display: block; margin: auto;" /&gt;
@@ -216,6 +211,13 @@ or
 
 ---
 class: middle, inverse
+
+# Live coding!
+
+### Ahhh! Don't try this at home!
+
+---
+class: middle, inverse
 # Synthesis and wrap-up
 
 
@@ -226,6 +228,8 @@ class: middle, inverse
 
 ---
 # To-Dos
+
+### Quiz on Unit 0 next class
 
 ### Optional follow-up:
 - Complete Module 4 in R Bootcamp (data types)
