Update class 1 slides

--- a/slides/EDUC641_1_intro.html
+++ b/slides/EDUC641_1_intro.html
@@ -32,11 +32,21 @@ class: center, middle, inverse, title-slide
 # Roadmap
 
 &lt;img src="roadmap.png" width="90%" style="display: block; margin: auto;" /&gt;
+---
+# Agenda
+
+.large[
+1. Overview of course: goals, pedagogy and logistics
+2. Research principles and design
+]
+
 
 ---
 # Class goals
 
+.large[
 1. Describe goals and structure and of the course (and the quantitative EDUC sequence more broadly) and principles of scientific research
+]
 
 ---
 # Goals of EDUC quant sequence
@@ -95,9 +105,10 @@ Concrete learning objectives:
   + These courses assume .blue[*no prior knowledge*] of either programming or math, beyond high-school Algebra I
   + Thus, I hope EDUC 641 provides a smooth on-ramp for everyone
   + If you're struggling, come talk to me
-  + If the course is too basic, consider either recommended texts for more formal mathematical treatment **AND/OR** the R Bootcamp extension activities (it will get more challenging)
+  + If the course is too basic, consider either recommended texts for more formal mathematical treatment **AND/OR** the R Bootcamp extension activities (it will get more challenging) **AND/OR** reflect on pedagogical approaches as a future instructor
 - Induct you into a graduate-level focus on mastery, rather than an undergraduate-level focus on success
 - Contribute to building a community of live learners and life-long professional colleagues
+- Assign everyone an A
 
 ---
 # Me
@@ -227,7 +238,9 @@ class: middle, inverse
 ---
 # Class goals
 
+.large[
 1. Describe goals and structure and of the course (and the quantitative EDUC sequence more broadly) and principles of scientific research
+]
 
 ---
 # To-Dos
