Update Class 2 slides

--- a/slides/EDUC641_2_measures.html
+++ b/slides/EDUC641_2_measures.html
@@ -36,7 +36,7 @@ class: center, middle, inverse, title-slide
                         
 ---
 # Class goals
-1. Describe types of and differences in measurement scales
+1. Describe types of and differences in measurement scales and why this matters
 
 
 ---
@@ -46,9 +46,8 @@ class: center, middle, inverse, title-slide
 
 **How we collect and quantify the data informs the kind of analysis we will conduct.**
 
-
 ---
-# Levels/scales of measurement
+# Core concepts in measurement
 
 **What is measurement?** assigning categories or numbers based on a set of rules
 
@@ -57,6 +56,17 @@ class: center, middle, inverse, title-slide
 .blue[This concept is **critical** to quantitative research: we have some idea of a "thing" we want to examine (sometimes called a construct), and we need to figure how to turn the observed thing into a category or number.]
 
 --
+
+1. A theoretical .blue[**construct**]: the "thing" you're trying to understand
+
+2. A .blue[**measure**]: the tool used to observe 
+
+3. An .blue[**operationalization**]: the connection between the measure and the construct
+
+4. A .blue[**variable**]: the thing that ends up in your data set
+
+---
+# Levels/scales of measurement
 
 **Levels of measurement**: how categories/numbers are defined
 
@@ -154,8 +164,16 @@ Categorical variable
 --
 
 Continuous variable
+- Always possible to have another value in between two other values
 - Interval and ratio measures
 - Data with arithmetic properties
+
+--
+
+Discrete variable
+- Not possible to have another value in between two other values, .red[**on that scale**]
+- Nominal and ordinal measures always discrete
+- Ratio/interval may or may not be (contrast "degrees Celsius" with "years")
 
 ---
 # Four levels/scales of measurement
@@ -175,6 +193,34 @@ Different scales contain different information and have different mathematical p
 Is someone who says they are at 8 on a happiness scale twice as happy as someone who says they are at a 4?
 
 Is there a mean (or standard deviation) for the hair color of the students in this class?
+
+
+---
+# More complexity
+
+- Quasi-interval scales
+- Non-negative ratio scales
+- Quasi-ordinal scales
+
+--
+
+... the point is that sometimes researchers treat measures as having certain kinds of mathematical properties that they may or may not have, which has implications to the conclusions that they make
+
+---
+# An example
+
+.pull-left[
+- Study in prominent journal (w. authors from U Chicago, U Toronto, U Cape Town) found that in more religious countries, children were less altruistic
+- Intended to compare within-country differences, so want to "adjust" for country-level "religiosity"
+- Included "country" as a ratio-scale variable: US = 1, Canada = 2, S. Africa = 3, etc.
+ + `\(\rightarrow\)` Canada has twice as much "country-ness" as US
+ + Clearly, it should be a nominal variable and treated as such
+- Direction of results flips when measure is appropriately implemented
+]
+
+.pull-right[
+&lt;img src="retract.jpg" width="961" style="display: block; margin: auto;" /&gt;
+]
 
 ---
 # The measure of our class
@@ -208,6 +254,19 @@ Qualtrics: https://oregon.qualtrics.com/jfe/form/SV_0MSB8ExhepNtVdA
 or
 
 &lt;img src="survey_qr.jpg" width="333" style="display: block; margin: auto;" /&gt;
+
+---
+# Measure reliability &amp; validity
+
+&lt;img src="lo_rely.jpg" width="1529" style="display: block; margin: auto;" /&gt;
+
+--
+.blue[**What kind of validity are we referencing here?**]
+
+---
+# Measure reliability &amp; validity
+
+&lt;img src="hi_rely.jpg" width="1529" style="display: block; margin: auto;" /&gt;
 
 ---
 class: middle, inverse
