--- a/schedule.html
+++ b/schedule.html
@@ -1088,6 +1088,8 @@ href="./slides/EDUC641_1_intro.pdf">pdf</a></li>
 href="./slides/EDUC641_2_measures.html">html</a> | <a
 href="./slides/EDUC641_2_measures.pdf">pdf</a></li>
 <li>R Tutorial slides: <a href="./slides/tutorial.html">html</a></li>
+<li>Lab slides: <a
+href="https://claireconglizhang.github.io/my-slides/EDUC64122F/lab1.html">html</a></li>
 </ul>
 </div>
 <div id="unit-1" class="section level2">
